--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Concurrent_Program_2 C)
 
 set(CMAKE_C_STANDARD 90)
 
-add_executable(Concurrent_Program_2 main.c qsort.c test.c merge.c)
+add_executable(Concurrent_Program_2 main.c qsort.c merge.c)
